--- a/README
+++ b/README
@@ -2,9 +2,11 @@
 Author: Rafael Sartori
 
 What is this?
-This is repository is for personal use of Rafael Sartori.
+It's a personal repository for use of Rafael Sartori.
 
-The most stuff here added are college tasks in many programming languages like Java, C, C++, Php etc.
+The most stuff here added are college tasks.
+
+Mainly programs in languages like Java, C, C++, Php etc.
 
 Rafael Sartori is undergraduate of Computer Science at Instite of Mathematics and Computer Science - University of Sao Paulo
 
