--- a/README
+++ b/README
@@ -8,7 +8,7 @@ The most stuff here added are college tasks.
 
 Mainly programs in languages like Java, C, C++, Php etc.
 
-Rafael Sartori is undergraduate of Computer Science at Instite of Mathematics and Computer Science - University of Sao Paulo.
+Rafael Sartori is undergraduate of Computer Science at Institute of Mathematics and Computer Science - University of Sao Paulo.
 
 My website: http://rafaelsart.com
 My blog: http://blog.rafaelsart.com
